# MCProxy

./: CLAUDE.md  Cargo.toml  test-config.json
.cargo/: config.toml
.github/workflows/: rust.yml
deploy/: compose.yaml  mcproxy-config.json
src/: config.rs  http_server.rs  main.rs  proxy.rs
src/middleware/proxy_middleware/: description_enricher.rs  tool_search.rs
