[package]
name = "mcproxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rmcp = { version = "0.2.1", features = [
    "client",
    "server",
    "macros",
    "transport-child-process",
    "transport-streamable-http-client",
    "transport-streamable-http-server",
    "transport-sse-client",
    "transport-io",
    "transport-async-rw",
    "reqwest",
    "auth",
] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
thiserror = "1.0"
anyhow = "1.0"
futures = "0.3"
url = "2.5.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
libc = "0.2"
atty = "0.2"
axum = { version = "0.8", features = ["json"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
tokio-util = "0.7"
sse-stream = "0.2.1"
async-trait = "0.1.88"
uuid = { version = "1.0", features = ["v4"] }
regex = "1.10"
tantivy = "0.22"

[dev-dependencies]
tempfile = "3.8"
http-body-util = "0.1"
